--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,45 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body, html{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* background-color: black;
+  color: white;
+  font-family: --font-mont; */
+  background-color: #f9f9fa;
+  color: #191919;
+}
+
+.bg-yellow{
+  background-color:#ffc15c;
+}
+.text-yellow{
+  color:#ffc15c;
+}
+
+.bg-green{
+  background-color:#29ab87;
+}
+.text-green{
+  color:#29ab87;
+}
+
+.bg-red{
+  background-color:#e3170a;
+}
+.text-red{
+  color:#e3170a;
+}
+
+/* @layer base {
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+
+  /* ... */
